@@ -32,6 +32,10 @@ If `$like_regex` is not passed, all table\_names in current database are returne
 
 returns create table statement like MySQL's 'show create table'.
 
+## my $create\_view\_sql = $self->show\_create\_view($view\_name);
+
+returns create view SQLt like MySQL's 'show create view'.
+
 # LICENSE
 
 Copyright (C) Takuya Tsuchida.
