@@ -43,6 +43,19 @@ EOSQL
     is( $result_show_create_table, $expected );
 };
 
+subtest 'show_create_view', sub {
+
+    $db->do('CREATE VIEW member_view AS SELECT id, name FROM member');
+
+    my $result = $db->show_create_view('member_view');
+    my $expected = <<EOSQL;
+CREATE ALGORITHM=UNDEFINED DEFINER=`root`@`localhost` SQL SECURITY DEFINER VIEW `member_view` AS select `member`.`id` AS `id`,`member`.`name` AS `name` from `member`
+EOSQL
+    $expected =~ s/\n$//; # trim last newline
+
+    is( $result, $expected );
+};
+
 subtest 'desc(table does not exist)', sub {
     my $result = $db->desc('hoge');
     is( $result, undef );
